change image repo url

--- a/Css/主题切换方案.md
+++ b/Css/主题切换方案.md
@@ -10,7 +10,7 @@
 >
 > 这样当我们切换挂载在body上面的主题样式时，整个页面的主题就发生了改变
 >
-> ![image-20230113175852725](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20230113175852725.png)
+> ![image-20230113175852725](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20230113175852725.png)
 
 - **useTheme.js**
 
