--- a/Css/设备像素比.md
+++ b/Css/设备像素比.md
@@ -59,4 +59,4 @@ var textString = "I love MDN";
 ctx.fillText(textString, x, y);
 ```
 
-<img src="https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/devicepixelration_diff..png" alt="devicepixelration_diff." style="zoom:67%;" />
+<img src="https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/devicepixelration_diff..png" alt="devicepixelration_diff." style="zoom:67%;" />
