--- a/NextJs/渲染原理.md
+++ b/NextJs/渲染原理.md
@@ -9,7 +9,7 @@
 1. 白屏时间过长：在 JS bundle 返回之前，页面一直是空白的。假如 bundle 体积过大或者网络条件不好的情况下，体验会更不好
 2. SEO 不友好：搜索引擎访问页面时，只会看 HTML 中的内容，默认是不会执行 JS，所以抓取不到页面的具体内容
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/9c06eb24944e4986b5516c904dbfb668~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/9c06eb24944e4986b5516c904dbfb668~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
 
 ## NextJS的三种渲染方式
 
@@ -17,7 +17,7 @@
 
 > SSG(Static Site Generation)，翻译过来是静态网站生成，可以理解为预渲染，也就是在项目构建时生成包含内容的html，之后将相应的html、js、css等静态资源发布到相应的CDN节点，这样当用户进行访问时页面可直接渲染便较好的性能，尤其适合公司官网等变动频率不高的静态资源
 >
-> ![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/c52bb0c7c2eb4c6c95faaacd37b26aba~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
+> ![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/c52bb0c7c2eb4c6c95faaacd37b26aba~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
 >
 > 在Next.js中，默认是支持预渲染的，如果没有使用类似`getServerSideProps`（服务端渲染函数），那么通过`npm run build`构建项目时便会自动生成一个html页面。比如以下这段代码，我们可以通过`getStaticProps`给组件传递一些初始参数，该方法将在构建时执行并将参数传递给组件，最终得到的html便包含组件所需要的参数
 
@@ -112,7 +112,7 @@ export async function getStaticPaths() {
 
 >SSR（Server Side Rendering）也就是服务端渲染，在Next.js中可通过在相应路由的页面中添加`getServerSideProps`给组件提供动态参数，该页面便会在请求到来时在服务端进行实时渲染并返回浏览器
 >
->![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/6af1835f99fe481686659201ffd5ff16~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
+>![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/6af1835f99fe481686659201ffd5ff16~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
 
 ```tsx
 function Page({ data }) {
@@ -133,7 +133,7 @@ export default Page
 ```
 
 与getStaticProps不同的是如果页面中添加了`getServerSideProps`那么在通过`npm run build`构建项目时只会生成React编译后的的js，不会渲染出html，因为页面对应的html只有在请求进来时才会在服务端动态渲染完成。如下图Next.js项目编译后使用○标注的便是服务端渲染页面的资源，使用●标注的便是采用预渲染页面的资源
-![截屏2022-09-06 09.12.37.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/09a0337bc12446308c3f2923bf4e6548~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
+![截屏2022-09-06 09.12.37.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/09a0337bc12446308c3f2923bf4e6548~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
 
 虽然服务端渲染可以很好的解决预渲染数据无法动态化的问题，但由于在每次请求时代码都需要在服务端进行编译、构建，这样当请求量增多时服务端无疑会产生过多的压力，相应带来的运维成本也会增加许多。所以在使用Next.js开发项目时对于不同页面SSR、SSG、CSR要灵活选用，像网站首页这种数据多处于静态的使用SSG便好，对于文章详情页面这种需要实时更新的可以使用SSR，在首屏加载无要求的情况下使用CSR便好
 
@@ -141,7 +141,7 @@ export default Page
 
 >ISR(Incremental Static Regeneration)也称之为增量渲染，其是SSG预渲染的一种补充，虽然SSG可以很好的将页面静态资源进行提前进行构建并部署到CDN来提高用户访问效率，但如果需要生成的页面过多比如有十几万个那么很难在服务端一次性生成，这时就需要使用到ISR做增量渲染
 >
->![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/10622b56fb3c47559cfa5259d8356d3d~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
+>![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/10622b56fb3c47559cfa5259d8356d3d~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
 >
 >Next.js的ISR是基于SSG进行实现的，同样是利用`getStaticProps`以及`getStaticPaths`两个Api，实现方式如下：
 
@@ -1090,7 +1090,7 @@ module.exports = merge(config, serverConfig)
 
 ### 总结
 
-> ![img](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/8acf7be90fc04df58a0defe78e61d88e~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
+> ![img](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/8acf7be90fc04df58a0defe78e61d88e~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
 
 #### 什么是同构(水合)：
 
@@ -1110,7 +1110,7 @@ module.exports = merge(config, serverConfig)
 
 在Next.js中当我们通过Link前端切换路由时浏览器会发送一个请求来获取一个json文件，这个文件中的内容就是当前组件所依赖的`props`，为什么我们需要发送一个请求来获取当前页面所依赖的props？
 
-![截屏2022-09-09 20.46.00.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/9ac688d117b14b489e49d01985d0fa57~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
+![截屏2022-09-09 20.46.00.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/9ac688d117b14b489e49d01985d0fa57~tplv-k3u1fbpfcp-zoom-in-crop-mark:4536:0:0:0.awebp)
 
 这是因为在Next.js中当我们通过Link跳转到其他页面时其实并不会重新加载html进行渲染，而是像React的单页面直接通过js卸载相应的节点渲染新的组件来实现页面切换的效果，而新组件所依赖的初始化state就是从浏览器所索取到的json文件中来
 
