--- a/React/不可变数据结构.md
+++ b/React/不可变数据结构.md
@@ -367,7 +367,7 @@ export default App
 >
 > **结构共享：**Immutable使用先进的tries(字典树)技术实现结构共享来解决性能问题，当我们对一个Immutable对象进行操作的时候，ImmutableJS会只clone该节点以及它的祖先节点，其他保持不变，这样可以共享相同的部分，大大提高性能。
 
-<img src="https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/immutable.gif" alt="immutable" style="zoom:67%;" />
+<img src="https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/immutable.gif" alt="immutable" style="zoom:67%;" />
 
 **使用immutable优缺点：**
 
