--- a/Tools/命令行工具.md
+++ b/Tools/命令行工具.md
@@ -82,4 +82,4 @@ program.parse(process.argv); //解析用户传入的命令
 
 **使用命令：**
 
-![image-20221101181812730](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20221101181812730.png)
+![image-20221101181812730](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20221101181812730.png)
