--- a/Tools/调试技巧.md
+++ b/Tools/调试技巧.md
@@ -10,13 +10,13 @@
 
 注意：由于这里调试工具的语言是中文，因此搜索“源代码映射”，如果是英文，则需要搜索“source map”
 
-![image-20221227104450492](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20221227104450492.png)
+![image-20221227104450492](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20221227104450492.png)
 
 ## 查看内容泄露
 
 > 打开内存选项，点击堆快照，然后就开始拍摄堆内存快照，拍摄完成之后就可以进行筛选，筛选Detached，它表示不连接的。举个例子，就比如说我有一百个div节点，它没有被渲染到页面中，但是它被一些全局变量所引用(`window.divList = [divs]`)。把它们筛选出来之后，就可以点击查看，通过对象栏就可以看到它们的具体位置
 
-![image-20221227110017040](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20221227110017040.png)
+![image-20221227110017040](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20221227110017040.png)
 
 ## DOM断点
 
@@ -24,39 +24,39 @@
 >
 > 但是如果我们使用了框架，如react，就会发生代码断到了react操作DOM的源码部分，这时候我们可以通过函数调用栈来向上追溯到源码部分
 
-![image-20221227111647565](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20221227111647565.png)
+![image-20221227111647565](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20221227111647565.png)
 
-![image-20221227112018067](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20221227112018067.png)
+![image-20221227112018067](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20221227112018067.png)
 
 ## 关闭debugger
 
 - **关闭所有的debugger**
 
-![image-20221227112527792fasdfasdfas](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20221227112527792fasdfasdfas.png)
+![image-20221227112527792fasdfasdfas](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20221227112527792fasdfasdfas.png)
 
 - **关闭特定debugger**
 
-![image-20221227112434780fsdfasd](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20221227112434780fsdfasd.png)
+![image-20221227112434780fsdfasd](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20221227112434780fsdfasd.png)
 
 ## 在控制台中添加日志
 
 1. 先在想要添加日志的地方右键，选择"添加日志点"
 
-![image-20221227113527044](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20221227113527044.png)
+![image-20221227113527044](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20221227113527044.png)
 
 2. 然后就可以添加日志了
 
-![image-20221227113635348](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227113635348fdsafdfas.png)
+![image-20221227113635348](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227113635348fdsafdfas.png)
 
 ## 条件断点
 
 1. 在想要添加条件断点的位置点击右键，然后点击“添加条件断点”
 
-![image-20221227114942126](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227114942126.png)
+![image-20221227114942126](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227114942126.png)
 
 2. 添加断点的条件
 
-![image-20221227115049909](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227115049909.png)
+![image-20221227115049909](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227115049909.png)
 
 ## 在浏览器中修改源代码
 
@@ -64,11 +64,11 @@
 
 1. 点击替换，点击选择旋转替换项的文件夹
 
-![image-20221227140554997](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227140554997.png)
+![image-20221227140554997](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227140554997.png)
 
 2. 选择一个文件夹后，chrome会请求一个权限，允许即可，然后就可以在源代码中直接做修改操作了，修改后，刷新即可运行
 
-![image-20221227140754862](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227140754862.png)
+![image-20221227140754862](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227140754862.png)
 
 ## 调试鼠标离开就会消失的DOM
 
@@ -84,7 +84,7 @@ settimeout(() => {
 
 2. 然后我们在这5秒内把鼠标放到要调试的元素上，让元素显现，5秒后进入debugger,我们就可以尽情调试了
 
-![image-20221227141623614](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227141623614.png)
+![image-20221227141623614](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227141623614.png)
 
 ## debug和undebug
 
@@ -118,15 +118,15 @@ settimeout(() => {
 
 1. 源代码 => 文件系统 => 向工作区添加文件夹
 
-![image-20221227142823952](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227142823952.png)
+![image-20221227142823952](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227142823952.png)
 
 2. 选中工作目录，同意chrome的权限申请
 
-![image-20221227143114894](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227143114894.png)
+![image-20221227143114894](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227143114894.png)
 
 3. 接下来，我们在浏览器中对样式的修改操作，就会同步到文件系统中了
 
-![image-20221227143235204](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227143235204.png)
+![image-20221227143235204](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227143235204.png)
 
 **注意：**这个方式有一个很大的局限性，那就是他只能同步原生css，如果使用了预处理语言，或者使用了一些类似于style-loader的东西，他就没办法同步了
 
@@ -134,21 +134,21 @@ settimeout(() => {
 
 1. 新建代码片断
 
-![image-20221227144546836](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227144546836.png)
+![image-20221227144546836](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227144546836.png)
 
 2. 使用代码片断
 
-![image-20221227144612657](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227144612657.png)
+![image-20221227144612657](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227144612657.png)
 
 ## 网络请求断点
 
 可以直接通过XHR断点来定位网络请求，只要该请求发起，断点就会断到请求发起的位置。但是我们一般不是直接通过ajax直接发起请求，而是使用类似于axios之类的库来发生请求，如果使用axios发起请求，想要找到发起请求的业务代码，就需要通过调用栈向上追溯了
 
-![image-20221227145232025](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227145232025.png)
+![image-20221227145232025](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227145232025.png)
 
 也可以直接在网络面板中找到相应的请求，然后点开他，在启动器中就可以看到相应的调用栈
 
-![image-20221227145528017](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227145528017.png)
+![image-20221227145528017](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227145528017.png)
 
 ## 获取DOM上绑定的事件
 
@@ -156,11 +156,11 @@ settimeout(() => {
 
 调出事件监听器栏的方式是：ctrl+shift+p => 输入“显示事件监听器”
 
-![image-20221227152343518](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227152343518.png)
+![image-20221227152343518](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227152343518.png)
 
 还有一种方式，就是点击元素，然后在控制台中就可以通过$0来访问该元素，然后就可以使用chrome提供的api：getEventListeners来获取到该元素绑定的事件
 
-![image-20221227152731469](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227152731469.png)
+![image-20221227152731469](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227152731469.png)
 
 ## DOM事件断点
 
@@ -168,21 +168,21 @@ settimeout(() => {
 
 调出事件监听器断点栏的方法：ctrl+shift+p => 输入"显示事件监听器断点"
 
-![image-20221227153158637](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227153158637.png)
+![image-20221227153158637](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227153158637.png)
 
 ## 重发请求、拷贝请求、修改请求
 
 如果想请求发送某个请求，不需要重新运行程序，只需要在网络调试工具中右击要重发的请求，重新发送即可：
 
-![image-20221227154425148](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227154425148.png)
+![image-20221227154425148](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227154425148.png)
 
 我们还可以复制这个请求，并转换成各种格式，比如在window中，可以把它复制成powerShell格式：
 
-![image-20221227154523221](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227154523221.png)
+![image-20221227154523221](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227154523221.png)
 
 这样我们就可以重发这个请求，并且可以对它的头或者cookie等内容进行编辑
 
-![image-20221227154730518](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227154730518.png)
+![image-20221227154730518](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227154730518.png)
 
 ## 控制台下的一些特殊变量和函数
 
@@ -204,20 +204,20 @@ settimeout(() => {
 
 1. 首先打开chrome devtools的性能监视器(ctrl+shift+p => 输入“显示性能监视器”)
 
-![image-20221227163239607](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227163239607.png)
+![image-20221227163239607](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227163239607.png)
 
 2. 在应用中进行各种操作，并观js内存占用量，如果发生堆内存占用只增不减就有理由怀疑发生了内存泄露，通过性能监视器观察在进行什么操作的时候会导致堆内存占用不断增加，从而大致判断发生内存泄露的地方
 
 3. 然后就可以使用内存工具观察具体发生内存泄露的原因，通过时间轴的方式录制页面内存使用的快照，录制期间就对刚才大致定位的地方进行反复操作
 
-![image-20221227163620874](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227163620874.png)
+![image-20221227163620874](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227163620874.png)
 
 4. 录制完成后，我们就可以定位这些内存高峰的时间点，进行分析
 
-![image-20221227164931555](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227164931555.png)
+![image-20221227164931555](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227164931555.png)
 
 ## 使用performance监听性能
 
 我们可以在performance面板中进行性能监测，看哪个操作耗费了大量时间，从而对该点进行优化。并且可以在performance面板中开启cpu降速，从而模拟应用在不同性能设备上的表现
 
-![image-20221227165710016](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/image-20221227165710016.png)
+![image-20221227165710016](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/image-20221227165710016.png)
