--- a/WebStandard/1. editorconfig.md
+++ b/WebStandard/1. editorconfig.md
@@ -22,4 +22,4 @@
 
 2. VSCode需要安装一个插件：EditorConfig for VS Code，这个插件是为了能让vscode可以读取我们编写的配置文件：
 
-![image-20210722215138665](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsq2gh989yj30pj05ggmb.jpg)
+![image-20210722215138665](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsq2gh989yj30pj05ggmb.jpg)
