--- a/WebStandard/2. prettier.md
+++ b/WebStandard/2. prettier.md
@@ -45,7 +45,7 @@
 
 4. VSCode需要安装prettier的插件：
 
-![image-20210722214543454](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsq2acx21rj30ow057mxp.jpg)
+![image-20210722214543454](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsq2acx21rj30ow057mxp.jpg)
 
 5. 测试prettier是否生效：
 
