--- a/WebStandard/3. ESLint.md
+++ b/WebStandard/3. ESLint.md
@@ -26,7 +26,7 @@
 > - **@eslint包**用来规范**eslint配置文件**
 > - **eslint开头的包**是**eslint运行包**，包含eslint代码
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/55f33918d4704fd49c99938a79c2e0ad~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/55f33918d4704fd49c99938a79c2e0ad~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
 
 ### 生成ESLint配置文件
 
@@ -40,7 +40,7 @@
 
 2. 创建配置文件过程中，需要选择配置：
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/cf3cd6358d5a4997a264d254674a81f1~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/cf3cd6358d5a4997a264d254674a81f1~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
 
 执行结束后，可以发现它帮我们干了两件事：
 
@@ -53,7 +53,7 @@
 - 命令：`npx eslint ./需要检查语法的文件路径`
 - 如果违法规范，会将错误提示到终端，说明eslint工作正常
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/52475bccdc924739a49f705da9b7db88~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/52475bccdc924739a49f705da9b7db88~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
 
 ## ESLint配置文件
 
@@ -61,7 +61,7 @@
 
 - 我们通过`npx eslint --init`创建配置文件时，有提供配置文件的格式给我们选择：
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/60c40492b34942c68b97d69f58f742a9~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/60c40492b34942c68b97d69f58f742a9~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
 
 - eslint 加载的优先级是 ： js > yaml > json，所以我们最好选择 **js格式**
 
@@ -70,7 +70,7 @@
 - 配置文件内部使用的**module.exports**导出配置数据
 - 这是因为我们在前面添加配置文件时，选择了 `CommonJS`
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/ad8305897c52403dae9214ab8f828579~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/ad8305897c52403dae9214ab8f828579~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
 
 推荐使用`CommonJS`，因为webpack打包默认用的是CommonJS，所以ESLlint配置文件应尽可能与它保持一致
 
@@ -133,11 +133,11 @@ ESLint解析器解析代码时，可以指定用哪个js的版本
 
 可以不使用`extend`节点配置**整套的规范**，而是在 `rules`节点中直接配置单个的规范
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/ff284f87324c41a9a7f03c105cfd213b~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/ff284f87324c41a9a7f03c105cfd213b~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
 
 也可以使用`extend`节点配置**整套的规范**，并且在`rules`节点中修改部分规范的配置：
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/9aa40b1eef594d0c9df4f636e2851286~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/9aa40b1eef594d0c9df4f636e2851286~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
 
 ## ESLint的rules语法
 
@@ -146,7 +146,7 @@ ESLint解析器解析代码时，可以指定用哪个js的版本
 > - eslint内置285个规则，每条规则都是一个**create函数**
 > - 在进行语法检查时，会将代码转成另一种
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/6c60c8114cd24cd2971d2d9143f9a489~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/6c60c8114cd24cd2971d2d9143f9a489~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
 
 ## 语法规范包
 
@@ -194,4 +194,4 @@ if (obj) {
 
 - 检查结果：严格程度 **all > airbnb-base > standard > recommended**
 
-![image.png](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img-2/a82d7088a3b248b9896870a8489aebb0~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
+![image.png](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img-2/a82d7088a3b248b9896870a8489aebb0~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp)
