--- a/WebStandard/4. ESLint_常见问题.md
+++ b/WebStandard/4. ESLint_常见问题.md
@@ -4,7 +4,7 @@
 >
 > 只要我们写的代码不符合eslint中配置的rules，vscode就会给我们报错（通过红色波浪线的方式）
 
-![image-20210722215933360](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsq2oq26odj30pw05faaq.jpg)
+![image-20210722215933360](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsq2oq26odj30pw05faaq.jpg)
 
 ## eslint和prettier冲突
 
@@ -55,7 +55,7 @@
 
 保存代码(保存自动进行lintfix)；
 
-![](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/Snipaste_2022-06-07_15-33-36.png)
+![](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/Snipaste_2022-06-07_15-33-36.png)
 
 配置lint脚本；
 
@@ -66,15 +66,15 @@
 
 ## 关闭vue编译时的自动lint
 
-![](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/Snipaste_2022-06-07_15-06-10.png)
+![](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/Snipaste_2022-06-07_15-06-10.png)
 
 ## 忽略eslint报错
 
-![](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/Snipaste_2022-06-07_22-25-21aaa.png)
+![](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/Snipaste_2022-06-07_22-25-21aaa.png)
 
 上面的代码中报了一个错误，说是声明过的变量没有使用，如果不想让eslint报这个错的话可以修改一下eslint的规则：
 
-![](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/Snipaste_2022-06-07_22-41-56.png)
+![](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/Snipaste_2022-06-07_22-41-56.png)
 
 当然还有一种简单的办法就是直接在报错的代码上面加上如下注释：
 
