--- a/WebStandard/6. husky.md
+++ b/WebStandard/6. husky.md
@@ -22,15 +22,15 @@ $ npm install husky -D
 $ npx husky-init
 ```
 
-![image-20210723112719634](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqq16zo75j307703mt8m.jpg)
+![image-20210723112719634](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqq16zo75j307703mt8m.jpg)
 
-![image-20210723112817691](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqq26phpxj30dj06fgm3.jpg)
+![image-20210723112817691](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqq26phpxj30dj06fgm3.jpg)
 
 ## pre-commit
 
 > 我们可以通过husky的pre-commit hook在进行commit时(pre-commit文件)执行lint脚本。由于我们前面解决了prettier和eslint、stylelint的冲突问题，因此我们这里运行lint脚本实际上不仅进行了lint检测，也使用prettier进行了格式规范
 
-![image-20210723112932943](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/Snipaste_2022-06-19_17-26-28.png)
+![image-20210723112932943](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/Snipaste_2022-06-19_17-26-28.png)
 
 ## 注意
 
