--- a/公众号＆小程序/微信小程序.md
+++ b/公众号＆小程序/微信小程序.md
@@ -4,7 +4,7 @@
 
 > 整个小程序框架系统分为两部分：逻辑层 和 视图层。小程序提供了自己的视图层描述语言 WXML 和 WXSS，以及基于JavaScript 的逻辑层框架，并在视图层与逻辑层间提供了数据传输和事件系统，让开发者能够专注于数据与逻辑。只需要在逻辑层更改数据，视图层内容就会相应更新。响应式的框架(mina框架，微信官方给小程序推出来的，只针对于微信小程序)
 
-<img src="https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/fjdaklsjf;lasdnv.png" alt="fjdaklsjf;lasdnv" style="zoom: 50%;" />
+<img src="https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/fjdaklsjf;lasdnv.png" alt="fjdaklsjf;lasdnv" style="zoom: 50%;" />
 
 ## 开发流程
 
@@ -952,11 +952,11 @@ Page({
 
 开发时,接口一般都是本地mock出来，没有https，所以可以勾选此配置，让它不检查
 
-<img src="https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/fasd12.png" alt="fasd12" style="zoom: 50%;" />
+<img src="https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/fasd12.png" alt="fasd12" style="zoom: 50%;" />
 
 除了一定要有https的接口，而且你的域名还一定要在小程序平台中登记过，否则也不行
 
-<img src="https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/f1dsa23f1sad.png" alt="f1dsa23f1sad" style="zoom: 50%;" />
+<img src="https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/f1dsa23f1sad.png" alt="f1dsa23f1sad" style="zoom: 50%;" />
 
 ### 发起网络请求
 
@@ -1017,7 +1017,7 @@ module.exports = { request }
 
 > 当用户访问我们的小程序时，得到当前用户对应此小程序的唯一标识(openid)的过程，叫小程序登录。得到了用户的唯一标识之后，就可以通过此标识来完成对应用户的标识，追踪在此小程序中的行为。
 
-<img src="https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/fdsa23f1as.png" alt="fdsa23f1as"  />
+<img src="https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/fdsa23f1as.png" alt="fdsa23f1as"  />
 
 登录流程一般写在app.js中，因为这是整个小程序的入口文件，他只会被执行一次，且是在一开始执行，因此非常适合做登录。在小程序中也有鄄存储，通过`wx.setStoraeSync`进行存储，`wx.getStorageSync`进行访问，最多可以存储10Mb的内容，有没有过期时间
 
