--- a/知识相关/微任务与宏任务.md
+++ b/知识相关/微任务与宏任务.md
@@ -40,7 +40,7 @@ setTimeout(function () {
 
 - 在下一次事件循环中，由第一次事件循环中promise创建的宏任务settimeout才会被插入到宏任务队列中并被执行。
 
-<img src="https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/image-20220803121104873.png" alt="image-20220803121104873"  />
+<img src="https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/image-20220803121104873.png" alt="image-20220803121104873"  />
 
 
 
