--- a/WebStandard/7. cz+commitlint.md
+++ b/WebStandard/7. cz+commitlint.md
@@ -2,7 +2,7 @@
 
 > 通常我们的git commit会按照统一的风格来提交，这样可以快速定位每次提交的内容，方便之后对版本进行控制。但是如果每次手动来编写这些是比较麻烦的事情，我们可以使用一个工具：Commitizen，它是一个帮助我们编写规范commit message(`conventional commit`规范)的工具
 
-<img src="https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqw17gaqjj30to0cj3zp.jpg" style="zoom:67%;" />
+<img src="https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqw17gaqjj30to0cj3zp.jpg" style="zoom:67%;" />
 
 ## 安装Commitizen
 
@@ -20,9 +20,9 @@ $ npx commitizen init cz-conventional-changelog --save-dev --save-exact
 
 这个命令会帮助我们安装cz-conventional-changelog，并且会在package.json中进行一些配置(配置日志保存地址)：
 
-![image-20210723145249096](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqvz2odi4j30ek00zmx2.jpg)
+![image-20210723145249096](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqvz2odi4j30ek00zmx2.jpg)
 
-![](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqvzftay5j30iu04k74d.jpg)
+![](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqvzftay5j30iu04k74d.jpg)
 
 ## 使用Commitizen
 
@@ -46,29 +46,29 @@ $ npx commitizen init cz-conventional-changelog --save-dev --save-exact
 
 2. 第二步选择本次修改的范围（作用域）：
 
-![image-20210723150147510](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqw8ca15oj30r600wmx4.jpg)
+![image-20210723150147510](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqw8ca15oj30r600wmx4.jpg)
 
 3. 第三步选择提交的信息：
 
-![image-20210723150204780](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqw8mq3zlj60ni01hmx402.jpg)
+![image-20210723150204780](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqw8mq3zlj60ni01hmx402.jpg)
 
 4. 第四步提交详细的描述信息：
 
-![image-20210723150223287](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqw8y05bjj30kt01fjrb.jpg)
+![image-20210723150223287](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqw8y05bjj30kt01fjrb.jpg)
 
 5. 第五步是否是一次重大的更改：
 
-![image-20210723150322122](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqw9z5vbij30bm00q744.jpg)
+![image-20210723150322122](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqw9z5vbij30bm00q744.jpg)
 
 6. 第六步是否影响某个open issue：
 
-![image-20210723150407822](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqwar8xp1j30fq00ya9x.jpg)
+![image-20210723150407822](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqwar8xp1j30fq00ya9x.jpg)
 
 ## 配置提交script
 
 > 我们也可以在scripts中构建一个命令来执行cz：
 
-![image-20210723150526211](https://cdn.jsdelivr.net/gh/ilmangoi/imgRepo@main/img/008i3skNgy1gsqwc4gtkxj30e207174t.jpg)
+![image-20210723150526211](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsqwc4gtkxj30e207174t.jpg)
 
 ## 配合commitlint使用
 
