--- a/WebStandard/2. prettier.md
+++ b/WebStandard/2. prettier.md
@@ -1,5 +1,7 @@
-> Prettier 是一款强大的代码格式化工具，支持 JavaScript、TypeScript、CSS、SCSS、Less、JSX、Angular、Vue、GraphQL、JSON、Markdown 等语言，基本上前端能用到的文件格式它都可以搞定，是当下最流行的代码格式化工具。与ESLint不同，prettier只用于代码风格格式化
->
+> Prettier 是一款强大的代码格式化工具，支持 JavaScript、TypeScript、CSS、SCSS、Less、JSX、Angular、Vue、GraphQL、JSON、Markdown 等语言，基本上前端能用到的文件格式它都可以搞定，是当下最流行的代码格式化工具。与ESLint不同，Prettier 不会告诉你，哪个地方格式错了，它只会输出一个格式化后的内容
+
+## command-line
+
 > 在一个项目中，我们不能强制别人安装prettier插件，但是我们可以强制要求安装prettier模块。prettier模块可以帮助我们格式代码风格，而prettier插件的作用是让我们在vscode中可以看到我们哪里有格式错误，方便了我们的开发：
 
 1. 安装prettier：
@@ -43,11 +45,7 @@
    /public/*
    ```
 
-4. VSCode需要安装prettier的插件：
-
-![image-20210722214543454](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsq2acx21rj30ow057mxp.jpg)
-
-5. 测试prettier是否生效：
+4. 测试prettier是否生效：
 
    * 测试一：保存代码(保存自动格式化)；
    * 测试二：配置一次性修改的命令；
@@ -59,4 +57,24 @@
    # 这个指令可以一次性格式化当前项目中的全部文件，免去了项目刚创建时一个一个文件去修改
    # 格式化时prettier会自动忽略掉.prettierignore中配置的文件
    ```
+   
+## IDE
 
+> 现在在项目中运行prettier命令，就可以修复代码中的格式问题了。但是Command-line的用法不方便，通常Prettier都是搭配IDE用的，在我们每一次保存文件时，自动跑一次formatting
+
+1. VSCode需要安装prettier的插件：
+
+![image-20210722214543454](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsq2acx21rj30ow057mxp.jpg)
+
+2. vscode配置:
+
+   ```json
+   {
+     "[typescript]": {
+       "editor.formatOnSave": true,
+       "editor.defaultFormatter": "esbenp.prettier-vscode",
+     },
+   }
+   ```
+
+   
