--- a/WebStandard/0. vsCode-setting.md
+++ b/WebStandard/0. vsCode-setting.md
@@ -1,3 +1,5 @@
+## 常见选项
+
 ``` json
 {
   // 在文件保存时使用eslint和stylelint修复代码
@@ -42,3 +44,43 @@
 }
 ```
 
+## 最佳实践
+
+- 所有文件都用Prettier做formatting
+
+```json
+"editor.formatOnSave": true,
+"editor.defaultFormatter": "esbenp.prettier-vscode",
+```
+
+- 有例外的话就特别声明
+
+```json
+"[cshtml]": {
+  "editor.formatOnSave": false,
+},
+```
+
+- Scss就用Stylelint就好，前提是Stylelint使用stylelint-prettier插件集成了Prettier
+
+```json
+"[scss]": {
+  "editor.formatOnSave": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.stylelint": "explicit"
+  }
+},
+```
+
+- TypeScript就用ESLint就好，前提是ESLint使用eslint-plugin-prettier插件集成了Prettier
+
+```json
+"[typescript]": {
+  "editor.formatOnSave": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+  }
+},
+```
+
+当然，VSCode只能在onsave的时候做formatting和检测，这是不够的，我们依然需要一个可以对整个项目做检测的方案。比如通过husky的pre-commit钩子配合lint-stage来在提交代码前做强制的代码检查
