--- a/WebStandard/2. prettier.md
+++ b/WebStandard/2. prettier.md
@@ -1,3 +1,5 @@
+# prettier
+
 > Prettier 是一款强大的代码格式化工具，支持 JavaScript、TypeScript、CSS、SCSS、Less、JSX、Angular、Vue、GraphQL、JSON、Markdown 等语言，基本上前端能用到的文件格式它都可以搞定，是当下最流行的代码格式化工具。与ESLint不同，Prettier 不会告诉你，哪个地方格式错了，它只会输出一个格式化后的内容
 
 ## command-line
@@ -58,7 +60,7 @@
    # 格式化时prettier会自动忽略掉.prettierignore中配置的文件
    ```
    
-## IDE
+## vscode插件
 
 > 现在在项目中运行prettier命令，就可以修复代码中的格式问题了。但是Command-line的用法不方便，通常Prettier都是搭配IDE用的，在我们每一次保存文件时，自动跑一次formatting
 
