--- a/WebStandard/3. ESLint.md
+++ b/WebStandard/3. ESLint.md
@@ -1,3 +1,5 @@
+# eslint
+
 ## 认识ESLint
 
 > 需要注意的是：ESLint 有两个工具，一个是模块包 ，一个是VSCode的扩展工具
@@ -8,7 +10,21 @@
 
 ### VS中ESLint扩展工具
 
-可以直接通过vscode搜索安装
+> VSCode需要安装ESLint插件，当vscode启动时，它会自动启动eslint扩展插件的语法检查服务器
+>
+> 只要我们写的代码不符合eslint中配置的rules，vscode就会给我们报错（通过红色波浪线的方式）
+
+![image-20210722215933360](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsq2oq26odj30pw05faaq.jpg)
+
+通过配置VSCode的codeActionsOnSave还可以让VSCode在保存时自动替我们运行 `eslint index.ts --fix`
+
+```json
+"[typescript]": {
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+  }
+}
+```
 
 ## 为什么要用ESLint
 
