--- a/WebStandard/4. ESLint_常见问题.md
+++ b/WebStandard/4. ESLint_常见问题.md
@@ -1,12 +1,6 @@
-## ESLint插件
+## eslint结合prettier
 
-> VSCode需要安装ESLint插件，当vscode启动时，它会自动启动eslint扩展插件的语法检查服务器
->
-> 只要我们写的代码不符合eslint中配置的rules，vscode就会给我们报错（通过红色波浪线的方式）
-
-![image-20210722215933360](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/008i3skNgy1gsq2oq26odj30pw05faaq.jpg)
-
-## eslint和prettier冲突
+### 解决冲突
 
 由于prettier有一套自己的规范.prettierrc，因此需要prettier的配置与eslint的配置(extends、rules)保持一致，否则就会冲突
 
@@ -51,18 +45,77 @@
   }
   ```
 
-## 使用eslint
+### eslint-plugin-prettier options
 
-保存代码(保存自动进行lintfix)；
+> 注意：虽然可以通过ESLint配置文件将选项传递给Prettier，但不建议这样做，因为`prettier-atom`和`prettier-vscode`等编辑器扩展将读取`.prettierrc`，但不会从ESLint读取设置，这可能会导致不一致的体验
 
-![](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/Snipaste_2022-06-07_15-33-36.png)
+```json
+{
+  "extends": [],
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      // 该选项表示将传递给prettier的选项的对象，此选项将合并并覆盖使用.prettierrc文件设置的任何配置
+      {
+        // 这里写Prettie的配置，额外plugin也是写这里，比如prettier-plugin-sort-imports
+        "printWidth": 100
+      },
+      {
+        // 启用Prettier配置文件的加载（默认值：true）。如果使用多个相互冲突的工具，或者不希望将ESLint设置与Prettier配置混合，这可能很有用(显然他珥第二个选项相冲突)
+        "usePrettierrc": false,
+        // 该选项用于决定文件是否需要格式化。例如，可用于选择不忽略位于node_modules目录中的文件
+        "fileInfoOptions": {
+          "withNodeModules": true
+        }
+      }
+    ]
+  }
+}
+```
 
-配置lint脚本；
+### 合并使用
+
+#### vscode插件
+
+当eslint内置Prettier之后，其实我们就不需要原本的Prettier进行代码格式化了，因为格式问题也会被当做eslint错误被抛出。
+
+并且如果不禁用保存时自动通过prettier进行代码格式化的话，它会在save的时候跑`eslint --fix`然后再跑`prettier --write`。虽然他们的规则统一了，但是也会造成额外的性能开销。
+
+```json
+"[typescript]": {
+  "editor.formatOnSave": false, // off prettier formatting 
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
+  }
+}
+```
+
+#### command-line
+
+由于把prettier规则当做eslint规则来使用了，因为并不需要使用prettier来格式化代码，只使用eslint修复就可以了
 
 ``` yaml
 "lint": "eslint --fix **/*.{js,ts}"
 # 该指令会lint除.eslintignore文件中忽略外的所有文件
 ```
+
+### 注意事项
+
+1. error message没有那么清楚：
+
+- 本来ESLint的formatting error是很清楚的
+
+   ![img](https://raw.githubusercontent.com/mangguoo/imgRepo/main/img-2/641294-20230721161747036-1882254349.png)
+
+- 改成Prettier的formatting后error message被弱化了
+
+  ![img](https://raw.githubusercontent.com/mangguoo/imgRepo/main/img-2/641294-20230721170154971-770055451.png)
+
+  这是因为ESLint有检测的概念，它的formatting是先检测哪里有问题，并且给予error然后才--fix。
+
+  Prettier它没有检测的功能，它是直接format输出formatted的内容。所有ESLint内部是拿format前和format后的内容做对比，然后返回一个简单的erorr message。
+
+2. 现在运行`eslint --fix`，它内部会执行`prettier --write`
 
 ## 关闭vue编译时的自动lint
 
@@ -88,19 +141,3 @@ console.log(b) // eslint-disable-line no-undef
 // eslint-disable-next-line no-undef
 console.log(c)
 ```
-
-## `.eslintignore`
-
-``` 
-/dist/*
-.local
-.history
-.output.js
-/node_modules/**
-
-**/*.svg
-**/*.sh
-
-/public/*
-```
-
