--- a/WebStandard/8. lint-staged.md
+++ b/WebStandard/8. lint-staged.md
@@ -1,3 +1,5 @@
+# lint-staged
+
 > 要保证多人协作中，每个人的代码风格一致，最简单的方法就是每个人都在提交代码之前先使用eslint、prettier等工具进行校验一遍
 >
 > 但是这种方法有一此缺点，那就是检测工具很多，可能需要检查处理多次，并且很容易忘记在提交之前进行检查处理
