--- a/WebStandard/5. stylelint.md
+++ b/WebStandard/5. stylelint.md
@@ -1,10 +1,71 @@
-> stylelint是现在最强大的css代码审查工具，由PostCSS提供技术支持。虽然CSS是一种另类的编程语言，通常并不会影响网页的正常运行，但是作为有尊严的前端程序员还是应该注重CSS的书写规范，增强代码可读性。为了方便开发者使用，stylelint社区提供了命令行、打包工具和编辑器上的插件。
+# stylelint
 
-1. 在vsCode下需要先安装stylelint插件：
+> stylelint是现在最强大的css代码审查工具，由PostCSS提供技术支持。虽然CSS是一种另类的编程语言，通常并不会影响网页的正常运行，但是CSS的书写规范也不应该被忽略，增强代码可读性。为了方便开发者使用，stylelint社区提供了命令行、打包工具和编辑器上的插件
 
-   ![](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/Snipaste_2022-06-19_15-38-59.png)
+## vscode插件
 
-2. 安装stylelint依赖：
+![](https://raw.githubusercontent.com/ilmangoi/imgRepo/main/img/Snipaste_2022-06-19_15-38-59.png)
+
+比起ESLint它需要配置比较多东西：
+
+```json
+{
+  // 关闭VSCode原生对CSS和Sass的检测，改用Stylelint
+  "css.validate": false,
+  "scss.validate": false,
+  "stylelint.validate": ["css", "scss"],
+  "[scss]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.stylelint": "explicit"
+    }
+  }
+}
+```
+
+## command-line
+
+### 运行lint
+
+```json
+"slint": "stylelint --fix **/*.{css,scss,scss,vue,html}"
+// 这个指令会lintfix除.stylelintignore文件中忽略外的所有文件
+```
+
+### 常用plugin
+
+#### 支持scss
+
+默认情况下他只可以检测CSS，但还不能检测Sass。我们需要再添加一些配置
+
+1. 安装依赖
+
+   ```shell
+   ## stylelint-config-standard-scss它依赖postcss
+   yarn add stylelint-config-standard-scss postcss --dev
+   ```
+
+2. 添加extends
+
+   ```json
+   {
+       "extends": [
+           "stylelint-config-standard",
+           "stylelint-config-standard-scss"
+       ]
+   }
+   ```
+
+3. 运行检测
+
+   ```shell
+   stylelint index.scss
+   ```
+
+   
+
+
+
+1. 安装stylelint依赖：
 
    ``` 
    npm i stylelint stylelint-config-html stylelint-config-recommended-scss stylelint-config-recommended-vue stylelint-config-standard stylelint-config-standard-scss stylelint-order stylelint-config-recess-order stylelint-config-prettier stylelint-prettier postcss postcss-html -D
@@ -66,7 +127,7 @@
 
      > 将Prettier作为Stylelint规则运行。当代码不符合 Prettier 的标准时，会报一个单纯的 stylelint 错误，同时也可以通过 stylelint --fix 来进行格式化；
 
-3. 配置.stylelintrc.js和.stylelintignore：
+2. 配置.stylelintrc.js和.stylelintignore：
 
    ``` js
    module.exports = {
@@ -81,64 +142,12 @@
    }
    ```
 
-   > rules 优先级大于 extends，建议采用 extends 方式统一管理
-
-   ``` 
-   /dist/*
-   .local
-   .history
-   .output.js
-   /node_modules/**
-   
-   **/*.svg
-   **/*.sh
-   
-   /public/*
-   ```
-
-4. 检验stylelint是否有效：
+3. 检验stylelint是否有效：
 
    * 测试一：保存代码(保存自动进行lintfix)；
    * 测试二：配置lint脚本；
 
     ``` yaml
-    "slint": "stylelint --fix **/*.{css,scss,scss,vue,html}"
-    # 这个指令会lintfix除.stylelintignore文件中忽略外的所有文件
+    
     ```
-
-5. 忽略stylelint错误：
-
-   ``` css
-   /* stylelint-disable order/properties-order */
-   .anlw1 {
-     top: 100px;
-     position: inherit;
-   }
-   /* stylelint-enable */
-   
-   .anlw2 {
-     top: 100px;
-     position: inherit; /* stylelint-disable-line order/properties-order */
-   }
-   
-   .anlw3 {
-     top: 100px;
-     /* stylelint-disable-next-line order/properties-order */
-     position: inherit;
-   }
-   ```
-   
-   或是直接在配置文件中进行全局忽略：
-   
-   ```js
-   module.exports = {
-     ... ...
-     rules: {
-       'font-family-no-missing-generic-family-keyword': null,
-       'selector-class-pattern': null
-     }
-   }
-   ```
-   
-   
 
