--- a/WebStandard/5. stylelint.md
+++ b/WebStandard/5. stylelint.md
@@ -33,6 +33,60 @@
 
 ### 常用plugin
 
+- ##### stylelint-config-recommended (规则-内置)
+
+  > 它包含了所有避免错误的 Stylelint 规则。
+  >
+  > 因此它可以作为自己规则的模板。
+
+- ##### stylelint-config-html (规则)
+
+  > 此配置依赖于postcss-html，并对其进行了配置。它可以让Stylelint可以解析HTML、XML、Vue、Svelte和PHP。
+
+- ##### stylelint-config-recommended-vue (规则)
+
+  > 继承了stylelint-config-recommended，并为vue配置规则。
+
+- ##### stylelint-config-recommended-scss (规则)
+
+  > 继承了stylelint-config-recommended，并为scss配置规则。
+
+- ##### stylelint-config-standard  (规则)
+
+  > 继承了stylelint-config-recommended，它是官方的代码风格，该风格是 Stylelint 的维护者汲取了 GitHub、Google、Airbnb 多家之长生成的。
+
+- ##### stylelint-config-standard-scss  (规则)
+
+  > 继承了stylelint-config-recommended-scss和stylelint-config-standard，并为scss配置规则。
+  >
+  > 由于其继承自stylelint-config-recommended-scss，因此在使用了它之后就不需要再使用stylelint-config-recommended-scss了。
+
+- **stylelint-order (插件)**
+
+  > 该插件的作用是强制你按照某个顺序编写 css。例如先写定位，再写盒模型，再写内容区样式，最后写 CSS3 相关属性。这样可以极大的保证我们代码的可读性。
+
+- **stylelint-config-recess-order (规则)**
+
+  > stylelint-order 插件的第三方配置。
+
+- **postcss  (插件)** 
+
+  > stylelint依赖于postcss。
+
+- **postcss-html (插件)**
+
+  > stylelint-config-html依赖于postcss-html。
+
+- **stylelint-config-prettier (插件)**
+
+  > 禁用所有与格式化相关的Stylelint规则。
+  >
+  > 从Stylelint v15开始，所有与样式相关的规则已被弃用。如果使用的是v15或更高版本并且不使用这些已弃用的规则，则不再需要此插件。
+
+- **stylelint-prettier (插件)**
+
+  > 将Prettier作为Stylelint规则运行。当代码不符 Prettier的标准时，会报一个单纯的stylelint错误，同时也可以通过stylelint --fix来进行格式化。
+
 #### 支持scss
 
 默认情况下他只可以检测CSS，但还不能检测Sass。我们需要再添加一些配置
@@ -40,7 +94,7 @@
 1. 安装依赖
 
    ```shell
-   ## stylelint-config-standard-scss它依赖postcss
+   # stylelint-config-standard-scss它依赖postcss
    yarn add stylelint-config-standard-scss postcss --dev
    ```
 
@@ -55,99 +109,71 @@
    }
    ```
 
-3. 运行检测
+#### prop order
+
+有时候CSS属性的顺序很烦人，如果我们想要统一规范可以借助stylelint-order插件
+
+1. 安装依赖
 
    ```shell
-   stylelint index.scss
+   # stylelint-config-recess-order依赖于stylelint-order
+   yarn add stylelint-order stylelint-config-recess-order --dev
    ```
 
-   
+2. 配置stylelint-order
 
-
-
-1. 安装stylelint依赖：
-
-   ``` 
-   npm i stylelint stylelint-config-html stylelint-config-recommended-scss stylelint-config-recommended-vue stylelint-config-standard stylelint-config-standard-scss stylelint-order stylelint-config-recess-order stylelint-config-prettier stylelint-prettier postcss postcss-html -D
+   ```json
+   {
+     "plugins": ["stylelint-order"],
+     "rules": {
+       "order/properties-order": [
+         "display",
+         "background-color"
+       ]
+     }
+   }
    ```
 
-   - ##### stylelint-config-recommended (规则-内置)
+   当然我们也可以跟随市场的规范，比如Bootstrap的顺序插件是[stylelint-config-recess-order](https://github.com/stormwarning/stylelint-config-recess-order)
 
-     > 它包含了所有避免错误的 Stylelint 规则。
-     >
-     > 因此它可以作为自己规则的模板。
-
-   - ##### stylelint-config-html (规则)
-
-     > 此配置依赖于postcss-html，并对其进行了配置。它可以让Stylelint可以解析HTML、XML、Vue、Svelte和PHP。
-
-   - ##### stylelint-config-recommended-vue (规则)
-
-     > 继承了stylelint-config-recommended，并为vue配置规则。
-
-   - ##### stylelint-config-recommended-scss (规则)
-
-     > 继承了stylelint-config-recommended，并为scss配置规则。
-
-   - ##### stylelint-config-standard  (规则)
-
-     > 继承了stylelint-config-recommended，它是官方的代码风格，该风格是 Stylelint 的维护者汲取了 GitHub、Google、Airbnb 多家之长生成的。
-
-   - ##### stylelint-config-standard-scss  (规则)
-
-     > 继承了stylelint-config-recommended-scss和stylelint-config-standard，并为scss配置规则。
-     >
-     > 由于其继承自stylelint-config-recommended-scss，因此在使用了它之后就不需要再使用stylelint-config-recommended-scss了。
-
-   - **stylelint-order (插件)**
-
-     > 该插件的作用是强制你按照某个顺序编写 css。例如先写定位，再写盒模型，再写内容区样式，最后写 CSS3 相关属性。这样可以极大的保证我们代码的可读性。
-
-   - **stylelint-config-recess-order (规则)**
-
-     > stylelint-order 插件的第三方配置。
-
-   - **postcss  (插件)** 
-
-     > stylelint依赖于postcss。
-
-   - **postcss-html (插件)**
-
-     > stylelint-config-html依赖于postcss-html。
-
-   ------
-
-   <!--使stylelint兼容prettier-->
-
-   - **stylelint-config-prettier (插件)**
-
-     > 禁用所有与格式化相关的 Stylelint 规则。
-
-   - **stylelint-prettier (插件)**
-
-     > 将Prettier作为Stylelint规则运行。当代码不符合 Prettier 的标准时，会报一个单纯的 stylelint 错误，同时也可以通过 stylelint --fix 来进行格式化；
-
-2. 配置.stylelintrc.js和.stylelintignore：
-
-   ``` js
-   module.exports = {
-     extends: [
-       'stylelint-config-standard',
-       'stylelint-config-html/vue',
-       'stylelint-config-standard-scss',
-       'stylelint-config-recommended-vue/scss',
-       'stylelint-config-recess-order',
-       'stylelint-prettier/recommended'
+   ```json
+   {
+     "extends": [
+       "stylelint-config-recess-order"
      ]
    }
    ```
 
-3. 检验stylelint是否有效：
+### 兼容prettier
 
-   * 测试一：保存代码(保存自动进行lintfix)；
-   * 测试二：配置lint脚本；
+1. 安装stylelint-prettier，由于从Stylelint v15开始，所有与样式相关的规则已被弃用。因此不再需要stylelint-config-prettier
 
-    ``` yaml
-    
-    ```
+   ```json
+   {
+     "extends": [
+       "stylelint-prettier/recommended"
+     ],
+     "rules": {
+       // 默认情况下，stylelint-prettier将遵循.prettierrc文件中的配置。如果希望覆盖.prettierrc文件中的配置才需要该选项
+       "prettier/prettier": [
+         true,
+         {
+           "singleQuote": true,
+           "printWidth": 100,
+           "endOfLine": "auto"
+         }
+       ]
+     }
+   }
+   ```
 
+2. 关闭VSCode setting [scss] formatOnSave
+
+   ```json
+   "[scss]": {
+     "editor.formatOnSave": false, // off prettier formatting
+     "editor.codeActionsOnSave": {
+       "source.fixAll.stylelint": "explicit" // 已经包含 prettier formatting 了
+     }
+   }
+   ```
