--- a/WebStandard/8. lint-staged.md
+++ b/WebStandard/8. lint-staged.md
@@ -32,12 +32,9 @@ $ npm install -D lint-staged
 
 ```json
 {
-    "**/*.scss": "stylelint --syntax less",
-    "**/*.{js,jsx,ts,tsx}": "eslint --ext .js,.jsx,.ts,.tsx",
-    "**/*.{js,jsx,tsx,ts,less,md,json}": [
-        "prettier --write",
-        "git add" 
-    ]
+  "src/**/*.{js,jsx,ts,tsx}": ["eslint --fix"],
+  "src/**/*.{css,scss}": ["stylelint --fix"],
+  "*.{json,md}": ["prettier --write"]
 }
 ```
 
